--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ p {
 }
 
 img {
-     height: 200px;
+     h
+  eight: 200px;
 }
 .categoria-videos {
 
@@ -41,4 +42,16 @@ img {
     overflow-x: auto;
     
 }
-  .categoria
+  
+.categoria-videos img
+   opacity:0,5;
+   height:200px ;
+{
+
+  }
+
+
+  .categoria-videos img {
+   opacity: 1;
+   border: 1px solid red;
+  }
